# school-holidays

./: .travis.yml  LICENSE  README.rst  setup.cfg
docs/: api_docs.rst  conf.py
school_holidays/: __init__.py
tests/: test_school_holidays.py
