[metadata]
name = school-holidays
author = voiio GmbH
author_email = opensource@voiio.de
description = List of school holidays
long_description = file: README.rst
url = https://github.com/voiio/school-holidays
license = MIT
license_file = LICENSE
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = school,holidays

[options]
include_package_data = True
packages = find:
install_requires =
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-cov

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=school_holidays --cov-report xml

[tox:tox]
envlist = py{35,36,37},docs

[testenv]
commands = python setup.py test

[testenv:docs]
commands = python setup.py build_sphinx -W -b html -b doctest

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[flake8]
max-line-length=88
exclude = venv,.tox,.eggs

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = school_holidays, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
